-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: hs24, 8
-
Component/s: hotspot
-
b08
-
generic
-
generic
-
Not verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-2223884 | 8 | Rickard Backman | P3 | Resolved | Fixed | b36 |
| JDK-8018190 | 7u45 | Rickard Backman | P3 | Closed | Fixed | b01 |
| JDK-8002466 | 7u40 | Rickard Backman | P3 | Closed | Fixed | b01 |
The JVM should provide intrinsification of a couple of method to reduce the overhead related to events in the tracing framework.
The methods identified are: timing, classID and threadID.
The methods identified are: timing, classID and threadID.
- backported by
-
JDK-2223884 Intrinsification support for tracing framework
-
- Resolved
-
-
JDK-8002466 Intrinsification support for tracing framework
-
- Closed
-
-
JDK-8018190 Intrinsification support for tracing framework
-
- Closed
-