7160570: Intrinsification support for tracing framework

Reviewed-by: sla, never